//protocol=11610;
option java_package = "com.chuangyou.common.protobuf.pb.rank";
option java_outer_classname = "GetRanksByTypeReqProto";



 //排行榜信息
message GetRanksByTypeReqMsg{
	required int32 rankType = 1;//排行榜类型编号
	required int32 rankRange = 2; //排行榜范围 1：日榜 2：周榜 3：月榜
}
